Implemented Swaggers
